--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,11 +1,28 @@
-platform :ios, '11.0'
+platform :ios, '13.0'
+install! 'cocoapods', :warn_for_unused_master_specs_repo => false
 use_frameworks!
 
-target 'BFTableView_Example' do
+target 'Example' do
   pod 'BFTableView', :path => '../'
 
-  target 'BFTableView_Tests' do
+  target 'ExampleTests' do
     inherit! :search_paths
+    # Pods for testing
+  end
 
+  target 'ExampleUITests' do
+    # Pods for testing
   end
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings.delete 'IPHONEOS_DEPLOYMENT_TARGET'
+      if config.name == 'BFTableView' 
+        config.build_settings['ALWAYS_EMBED_SWIFT_STANDARD_LIBRARIES'] = 'Yes'
+      end
+    end
+  end
+end
+
